{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 9,
  "lineage": "12433497-f5fc-eac3-4cc1-68987be16593",
  "resources": [
    {
      "module": "module.oauth_poc_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d2a4a5d69e46ea0b",
            "arn": "arn:aws:ec2:eu-west-1:364737596256:instance/i-0a6542fe8ab80ac61",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6542fe8ab80ac61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "oauth_poc_poc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a0eafb4d1bf66819",
            "private_dns": "ip-10-250-1-143.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.1.143",
            "public_dns": "ec2-34-245-66-76.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.66.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-045390cbc416df667",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e98bc39b4851d072",
            "tags": {
              "Name": "oauth_poc_poc"
            },
            "tags_all": {
              "Name": "oauth_poc_poc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "oauth_poc_poc"
            },
            "vpc_security_group_ids": [
              "sg-003e339fb4d778233"
            ]
          },
          "dependencies": [
            "aws_key_pair.this",
            "data.template_file.oauth_poc_data",
            "module.oauth_poc_sg.aws_security_group.this",
            "module.oauth_poc_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.oauth_poc_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:364737596256:security-group/sg-003e339fb4d778233",
            "description": "Security Group managed by Terraform",
            "egress": [],
            "id": "sg-003e339fb4d778233",
            "ingress": [],
            "name": "hsm-controller-sg-20230123132532716100000001",
            "name_prefix": "hsm-controller-sg-",
            "owner_id": "364737596256",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hsm-controller-sg"
            },
            "tags_all": {
              "Name": "hsm-controller-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e8c037e44a386fc"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.oauth_poc_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-171493836",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-003e339fb4d778233",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.oauth_poc_sg.aws_security_group.this",
            "module.oauth_poc_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.oauth_poc_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "213.215.6.86/32",
              "89.3.198.165/32",
              "194.79.179.82/32",
              "37.58.221.152/32",
              "77.158.138.66/32",
              "167.99.199.228/32",
              "62.23.155.50/32",
              "185.160.8.88/32",
              "52.50.31.80/32",
              "34.240.150.212/32",
              "212.106.106.198/32"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3295440139",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003e339fb4d778233",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.oauth_poc_sg.aws_security_group.this",
            "module.oauth_poc_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "213.215.6.86/32",
              "89.3.198.165/32",
              "194.79.179.82/32",
              "37.58.221.152/32",
              "77.158.138.66/32",
              "167.99.199.228/32",
              "62.23.155.50/32",
              "185.160.8.88/32",
              "52.50.31.80/32",
              "34.240.150.212/32",
              "212.106.106.198/32"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-3192235256",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003e339fb4d778233",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.oauth_poc_sg.aws_security_group.this",
            "module.oauth_poc_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "213.215.6.86/32",
              "89.3.198.165/32",
              "194.79.179.82/32",
              "37.58.221.152/32",
              "77.158.138.66/32",
              "167.99.199.228/32",
              "62.23.155.50/32",
              "185.160.8.88/32",
              "52.50.31.80/32",
              "34.240.150.212/32",
              "212.106.106.198/32"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3583235592",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003e339fb4d778233",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.oauth_poc_sg.aws_security_group.this",
            "module.oauth_poc_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}